[package]
name = "wataash_utils"
version = "0.1.0"
authors = ["Wataru Ashihara <wataash@wataash.com>"]
edition = "2018"

description = "wataash's personal utilities"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/wataash/wataash_utils_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
